--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -97,5 +97,6 @@
   "passwordRegister": "Пароль",
   "log_in": "Вход",
   "registration_failed": "Регистрация не удалась",
-  "error_occurred": "Произошла ошибка. Пожалуйста, попробуйте еще раз."
+  "error_occurred": "Произошла ошибка. Пожалуйста, попробуйте еще раз.",
+  "shoppingText": "Ваша корзина покупок"
 }
